--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h3 class="text-worning"> no phone found .please try a new search</h3>
             </div>
         </section>
-        <section class="d-none">
+        <section id="loder" class="d-none">
             <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
                 <div class="spinner-border" role="status">
                     <span class="visually-hidden">Loading...</span>
