--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <div id="display-no-phone" class=" mt-4 d-none">
                 <h3 class="text-worning"> no phone found .please try a new search</h3>
             </div>
+            <div id="show-all" class=" mt-4 text-center d-none ">
+                <div id="btn-show-all" class="btn btn-primary">show all</div>
+            </div>
+
         </section>
         <section id="loder" class="d-none">
             <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
@@ -36,6 +40,7 @@
                     <span class="visually-hidden">Loading...</span>
                 </div>
             </div>
+
         </section>
 
     </main>
