--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <h1>phone hunter</h1>
+    <h1 class="container text-center text-info mb-3"> !! Find Your Phone Here !!</h1>
     <main class="container">
         <section>
-            <div class="mb-3 w-50 d-flex justyfy-contant-center align-items-center">
+            <div class="mb-3 w-100 d-flex justyfy-contant-center align-item-center">
                 <input id="search-field" type="email" class="form-control" placeholder="">
-                <div id="btn-search" class="btn btn-primary">search</div>
+                <div id="btn-search" class="btn btn-info ">search</div>
             </div>
         </section>
         <section>
@@ -41,6 +41,29 @@
                 </div>
             </div>
 
+        </section>
+        <section>
+            <!-- Button trigger modal -->
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="phoneDetailModal" tabindex="-1" aria-labelledby="phoneDetailModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="phoneDetails"></h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div id="phone-details-body" class="modal-body">
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
